# RoofChecker

./: Dockerfile  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile
.github/workflows/: docker.yml  ruff.yml  test.yml
components/: __init__.py  config.py
components/dataset/: __init__.py  config.py  main.py
components/model/: __init__.py  config.py  main.py
components/predict/: __init__.py  heatmap.py  loss.py
components/share/: __init__.py  feature.py  transform.py
components/train/: __init__.py  main.py
