[project]
name = "default"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "a5chin" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "torch==2.3.1+cpu",
    "torchvision==0.18.1+cpu",
    "timm>=1.0.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
    "ruff>=0.5.0",
]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.setuptools.packages.find]
include = ["components", "data"]
